# fastapi-practice

./: .gitignore  DESCRIPTION.md  LICENSE  README.md  main.py  pyproject.toml
fastapi_test/: image_processing.py  rgb_to_json.py
img_kpt/: img_kpt.py  target_weight.npy
inpainting/: inpainting.py
rembg/: rembg.py
rembg/u2net/: data_loader.py  detect.py  u2net.py
rgb_to_json/: rgb_to_json.py
strawberry/: .gitignore  strawberry.py
strawberry/data/validation/: train-coco_style_template.json  val-coco_style-one_sample.json  val-coco_style.json
strawberry/experiments/: keypoint_strawberry.yaml
strawberry/lib/core/: evaluate.py  function.py
strawberry/lib/dataset/: JointsDataset.py  __init__.py  straw_try.py
strawberry/lib/models/: __init__.py
strawberry/lib/nms/: cpu_nms.c  gpu_nms.cpp  nms.py  setup_linux.py
strawberry/lib/utils/: transforms.py  vis.py
strawberry/tools/: data_preprocess.py  data_processing.py  drawing_size.py  keypoint_visualization.py
strawberry/tools/utils/: make_template_segmentation.py  size_info.py
