[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Heejae Kwon <sfhy33@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_test"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
numpy = "^1.25.2"
opencv-python = "^4.8.0.76"
torch = "^2.0.1"
torchvision = "^0.15.2"
pyntcloud = "^0.3.1"
plyfile = "^1.0.1"
imageio = "^2.31.3"
tensorflow = "^2.13.0"
python-multipart = "^0.0.6"
email-validator = "^2.0.0.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
