[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Heejae Kwon <sfhy33@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_test"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
opencv-python = "^4.8.0.76"
pyntcloud = "^0.3.1"
plyfile = "^1.0.1"
imageio = "^2.31.3"
python-multipart = "^0.0.6"
email-validator = "^2.0.0.post2"
matplotlib = "^3.8.0"
tqdm = "^4.66.1"
scikit-image = "^0.21.0"
ftfy = "^6.1.1"
accelerate = "^0.23.0"
transformers = "^4.33.2"
diffusers = "^0.21.2"
numpy = "^1.23"
tensorflow = "2.13"
torch = "^2.1.0"
torchvision = "^0.16.0"
yacs = "^0.1.8"
pycocotools = "^2.0.7"
json-tricks = "^3.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
